// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SidebarItem collapsible menu is expanded when one of the children is selected 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="h-full shadow-[inset_-1px_0_0_0] text-lg/[inherit] relative transition-[width] ease-in delay-[225ms] min-[1280px]:block xs:max-sm:w-[100vw] xs:max-sm:overflow-y [&]:before:absolute [&]:before:content-[""] [&]:before:left-0 [&]:before:top-0 [&]:before:w-[15.5rem] [&]:before:h-full shadow-gray bg-gray w-[236px] block"
    >
      <div
        class="h-full max-h-[calc(100vh-var(--header sticky top-[var(--header"
      >
        <div
          class="flex flex-col scrollable-content h-full overflow-y pt-4 pb-2 px-0"
        >
          <div
            class="order-[50] flex-1 h-full"
          />
          <ul
            class="relative list-none outline-none py-2 px-0 m-0 rounded-sm shadow-0 order-1 [&_&]:flex-1 flex-grow flex-shrink max-w"
            role="menu"
            tabindex="-1"
          >
            <div
              class="MuiPaper-root MuiAccordion-root PicassoAccordion-root PicassoAccordion-bordersNone Mui-expanded MuiAccordion-rounded MuiPaper-elevation0 MuiPaper-rounded"
            >
              <div
                aria-disabled="false"
                aria-expanded="true"
                class="MuiButtonBase-root MuiAccordionSummary-root WithStyles(ForwardRef(AccordionSummary))-root PicassoAccordion-summary PicassoSidebarItemAccordion-collapsibleWrapper Mui-expanded"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content WithStyles(ForwardRef(AccordionSummary))-content PicassoAccordion-content PicassoSidebarItemAccordion-content Mui-expanded"
                >
                  <li
                    aria-disabled="false"
                    class="bg-transparent px-4 py-[0.375rem] w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden text-left no-underline flex items-center justify-start outline-none appearance-none leading-4 h-[2.75rem] whitespace-nowrap rounded-sm flex-1 min-w text-graphite hover:text-blue focus:text-blue pl-0 pr-0 pt-0 pb-0 mt-0 mb-0 mr-0 ml-0"
                    role="menuitem"
                    tabindex="0"
                  >
                    <div
                      class="flex flex-1 max-w"
                    >
                      <div
                        class="flex flex-col flex-1 min-w"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="gap-2 items-center inline-flex PicassoSidebarItemContent-noWrap"
                          >
                            <div
                              class="items-center flex PicassoSidebarItemContent-noWrap"
                            >
                              <p
                                class="m-0 text-md text-inherit font-regular whitespace-nowrap overflow-ellipsis overflow-hidden"
                              >
                                Test item
                              </p>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </li>
                  <svg
                    class="PicassoSvgArrowDownMinor16-root PicassoSidebarItemAccordion-expandIcon PicassoSidebarItemAccordion-lightExpandIcon PicassoAccordion-expandIcon PicassoAccordion-expandIconExpanded"
                    style="min-width: 16px; min-height: 16px;"
                    viewBox="0 0 16 16"
                  >
                    <path
                      d="m11.997 5.29.707.707-4 4-.707.707-.707-.707-4-4 .707-.707 4 4 4-4Z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiCollapse-root"
                style="min-height: 0px; height: 0px; transition-duration: 0ms;"
              >
                <div
                  class="MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner"
                  >
                    <div
                      role="region"
                    >
                      <div
                        class="flex p-0"
                      >
                        <ul
                          class="relative list-none outline-none py-2 px-0 m-0 rounded-sm shadow-0 order-1 [&_&]:flex-1 flex-grow flex-shrink max-w"
                          role="menu"
                          tabindex="-1"
                        >
                          <li
                            aria-disabled="false"
                            class="px-4 py-[0.375rem] w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden text-left no-underline flex items-center justify-start outline-none appearance-none leading-4 h-[2.75rem] whitespace-nowrap rounded-sm flex-1 min-w text-blue hover:text-blue focus:text-blue bg-gray hover:bg-gray focus:bg-gray pl-8 pr-4 pt-0 pb-0 mt-0 mb-0 mr-4 ml-4"
                            role="menuitem"
                            tabindex="0"
                          >
                            <div
                              class="flex flex-1 max-w"
                            >
                              <div
                                class="flex flex-col flex-1 min-w"
                              >
                                <div
                                  class="flex items-center"
                                >
                                  <div
                                    class="gap-2 items-center inline-flex PicassoSidebarItemContent-noWrap"
                                  >
                                    <div
                                      class="items-center flex PicassoSidebarItemContent-noWrap"
                                    >
                                      <p
                                        class="m-0 text-md text-inherit font-regular whitespace-nowrap overflow-ellipsis overflow-hidden"
                                      >
                                        Menu item
                                      </p>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SidebarItem collapsible menu is expanded when one of the children is selected and subMenu has a wrapper component 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="h-full shadow-[inset_-1px_0_0_0] text-lg/[inherit] relative transition-[width] ease-in delay-[225ms] min-[1280px]:block xs:max-sm:w-[100vw] xs:max-sm:overflow-y [&]:before:absolute [&]:before:content-[""] [&]:before:left-0 [&]:before:top-0 [&]:before:w-[15.5rem] [&]:before:h-full shadow-gray bg-gray w-[236px] block"
    >
      <div
        class="h-full max-h-[calc(100vh-var(--header sticky top-[var(--header"
      >
        <div
          class="flex flex-col scrollable-content h-full overflow-y pt-4 pb-2 px-0"
        >
          <div
            class="order-[50] flex-1 h-full"
          />
          <ul
            class="relative list-none outline-none py-2 px-0 m-0 rounded-sm shadow-0 order-1 [&_&]:flex-1 flex-grow flex-shrink max-w"
            role="menu"
            tabindex="-1"
          >
            <div
              class="MuiPaper-root MuiAccordion-root PicassoAccordion-root PicassoAccordion-bordersNone Mui-expanded MuiAccordion-rounded MuiPaper-elevation0 MuiPaper-rounded"
            >
              <div
                aria-disabled="false"
                aria-expanded="true"
                class="MuiButtonBase-root MuiAccordionSummary-root WithStyles(ForwardRef(AccordionSummary))-root PicassoAccordion-summary PicassoSidebarItemAccordion-collapsibleWrapper Mui-expanded"
                role="button"
                tabindex="0"
              >
                <div
                  class="MuiAccordionSummary-content WithStyles(ForwardRef(AccordionSummary))-content PicassoAccordion-content PicassoSidebarItemAccordion-content Mui-expanded"
                >
                  <li
                    aria-disabled="false"
                    class="bg-transparent px-4 py-[0.375rem] w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden text-left no-underline flex items-center justify-start outline-none appearance-none leading-4 h-[2.75rem] whitespace-nowrap rounded-sm flex-1 min-w text-graphite hover:text-blue focus:text-blue pl-0 pr-0 pt-0 pb-0 mt-0 mb-0 mr-0 ml-0"
                    role="menuitem"
                    tabindex="0"
                  >
                    <div
                      class="flex flex-1 max-w"
                    >
                      <div
                        class="flex flex-col flex-1 min-w"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="gap-2 items-center inline-flex PicassoSidebarItemContent-noWrap"
                          >
                            <div
                              class="items-center flex PicassoSidebarItemContent-noWrap"
                            >
                              <p
                                class="m-0 text-md text-inherit font-regular whitespace-nowrap overflow-ellipsis overflow-hidden"
                              >
                                Test item
                              </p>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </li>
                  <svg
                    class="PicassoSvgArrowDownMinor16-root PicassoSidebarItemAccordion-expandIcon PicassoSidebarItemAccordion-lightExpandIcon PicassoAccordion-expandIcon PicassoAccordion-expandIconExpanded"
                    style="min-width: 16px; min-height: 16px;"
                    viewBox="0 0 16 16"
                  >
                    <path
                      d="m11.997 5.29.707.707-4 4-.707.707-.707-.707-4-4 .707-.707 4 4 4-4Z"
                    />
                  </svg>
                </div>
              </div>
              <div
                class="MuiCollapse-root"
                style="min-height: 0px; height: 0px; transition-duration: 0ms;"
              >
                <div
                  class="MuiCollapse-wrapper"
                >
                  <div
                    class="MuiCollapse-wrapperInner"
                  >
                    <div
                      role="region"
                    >
                      <div
                        class="flex p-0"
                      >
                        <ul
                          class="relative list-none outline-none py-2 px-0 m-0 rounded-sm shadow-0 order-1 [&_&]:flex-1 flex-grow flex-shrink max-w"
                          role="menu"
                          tabindex="-1"
                        >
                          <li
                            aria-disabled="false"
                            class="px-4 py-[0.375rem] w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden text-left no-underline flex items-center justify-start outline-none appearance-none leading-4 h-[2.75rem] whitespace-nowrap rounded-sm flex-1 min-w text-blue hover:text-blue focus:text-blue bg-gray hover:bg-gray focus:bg-gray pl-8 pr-4 pt-0 pb-0 mt-0 mb-0 mr-4 ml-4"
                            role="menuitem"
                            tabindex="0"
                          >
                            <div
                              class="flex flex-1 max-w"
                            >
                              <div
                                class="flex flex-col flex-1 min-w"
                              >
                                <div
                                  class="flex items-center"
                                >
                                  <div
                                    class="gap-2 items-center inline-flex PicassoSidebarItemContent-noWrap"
                                  >
                                    <div
                                      class="items-center flex PicassoSidebarItemContent-noWrap"
                                    >
                                      <p
                                        class="m-0 text-md text-inherit font-regular whitespace-nowrap overflow-ellipsis overflow-hidden"
                                      >
                                        Menu item
                                      </p>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SidebarItem don't use accordion for non-collapsible with menu 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="bg-transparent px-4 py-[0.375rem] w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden text-left no-underline flex items-center justify-start outline-none appearance-none leading-4 h-[2.75rem] whitespace-nowrap rounded-sm flex-1 min-w text-graphite hover:text-blue focus:text-blue pl-4 pr-4 pt-0 pb-0 mt-0 mb-0 mr-4 ml-4"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="flex flex-1 max-w"
      >
        <div
          class="flex flex-col flex-1 min-w"
        >
          <div
            class="flex items-center"
          >
            <div
              class="gap-2 items-center inline-flex PicassoSidebarItemContent-noWrap"
            >
              <svg
                class="PicassoSvgCandidates16-root"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <path
                  d="M16 11H7v4l-7-4V1h16v10Zm-1-9H1v8.42l5 2.857V10h9V2Z"
                />
              </svg>
              <div
                class="items-center flex PicassoSidebarItemContent-noWrap PicassoSidebarItemContent-withIcon"
              >
                <p
                  class="m-0 text-md text-inherit font-regular whitespace-nowrap overflow-ellipsis overflow-hidden"
                >
                  Test item
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <div>
      <ul
        class="relative list-none outline-none py-2 px-0 m-0 rounded-sm shadow-0 order-1 [&_&]:flex-1 flex-grow flex-shrink max-w"
        role="menu"
        tabindex="-1"
      >
        <li
          aria-disabled="false"
          class="bg-transparent px-4 py-[0.375rem] w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden text-left no-underline flex items-center justify-start outline-none appearance-none leading-4 h-[2.75rem] whitespace-nowrap rounded-sm flex-1 min-w text-graphite hover:text-blue focus:text-blue pl-[2.875rem] pr-4 pt-0 pb-0 mt-0 mb-0 mr-4 ml-4"
          role="menuitem"
          tabindex="0"
        >
          <div
            class="flex flex-1 max-w"
          >
            <div
              class="flex flex-col flex-1 min-w"
            >
              <div
                class="flex items-center"
              >
                <div
                  class="gap-2 items-center inline-flex PicassoSidebarItemContent-noWrap"
                >
                  <div
                    class="items-center flex PicassoSidebarItemContent-noWrap"
                  >
                    <p
                      class="m-0 text-md text-inherit font-regular whitespace-nowrap overflow-ellipsis overflow-hidden"
                    >
                      Menu item
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`SidebarItem is selected 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="px-4 py-[0.375rem] w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden text-left no-underline flex items-center justify-start outline-none appearance-none leading-4 h-[2.75rem] whitespace-nowrap rounded-sm flex-1 min-w text-blue hover:text-blue focus:text-blue bg-gray hover:bg-gray focus:bg-gray pl-4 pr-4 pt-0 pb-0 mt-0 mb-0 mr-4 ml-4"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="flex flex-1 max-w"
      >
        <div
          class="flex flex-col flex-1 min-w"
        >
          <div
            class="flex items-center"
          >
            <div
              class="gap-2 items-center inline-flex PicassoSidebarItemContent-noWrap"
            >
              <svg
                class="PicassoSvgCandidates16-root"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <path
                  d="M16 11H7v4l-7-4V1h16v10Zm-1-9H1v8.42l5 2.857V10h9V2Z"
                />
              </svg>
              <div
                class="items-center flex PicassoSidebarItemContent-noWrap PicassoSidebarItemContent-withIcon"
              >
                <p
                  class="m-0 text-md text-inherit font-regular whitespace-nowrap overflow-ellipsis overflow-hidden"
                >
                  Test item
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
  </div>
</div>
`;

exports[`SidebarItem renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="bg-transparent px-4 py-[0.375rem] w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden text-left no-underline flex items-center justify-start outline-none appearance-none leading-4 h-[2.75rem] whitespace-nowrap rounded-sm flex-1 min-w text-graphite hover:text-blue focus:text-blue pl-4 pr-4 pt-0 pb-0 mt-0 mb-0 mr-4 ml-4"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="flex flex-1 max-w"
      >
        <div
          class="flex flex-col flex-1 min-w"
        >
          <div
            class="flex items-center"
          >
            <div
              class="gap-2 items-center inline-flex PicassoSidebarItemContent-noWrap"
            >
              <div
                class="items-center flex PicassoSidebarItemContent-noWrap"
              >
                <p
                  class="m-0 text-md text-inherit font-regular whitespace-nowrap overflow-ellipsis overflow-hidden"
                >
                  Test item
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
  </div>
</div>
`;

exports[`SidebarItem use accordion for collapsible with menu 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="MuiPaper-root MuiAccordion-root PicassoAccordion-root PicassoAccordion-bordersNone MuiAccordion-rounded MuiPaper-elevation0 MuiPaper-rounded"
    >
      <div
        aria-disabled="false"
        aria-expanded="false"
        class="MuiButtonBase-root MuiAccordionSummary-root WithStyles(ForwardRef(AccordionSummary))-root PicassoAccordion-summary PicassoSidebarItemAccordion-collapsibleWrapper"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiAccordionSummary-content WithStyles(ForwardRef(AccordionSummary))-content PicassoAccordion-content PicassoSidebarItemAccordion-content"
        >
          <li
            aria-disabled="false"
            class="bg-transparent px-4 py-[0.375rem] w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden text-left no-underline flex items-center justify-start outline-none appearance-none leading-4 h-[2.75rem] whitespace-nowrap rounded-sm flex-1 min-w text-graphite hover:text-blue focus:text-blue pl-0 pr-0 pt-0 pb-0 mt-0 mb-0 mr-0 ml-0"
            role="menuitem"
            tabindex="-1"
          >
            <div
              class="flex flex-1 max-w"
            >
              <div
                class="flex flex-col flex-1 min-w"
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="gap-2 items-center inline-flex PicassoSidebarItemContent-noWrap"
                  >
                    <svg
                      class="PicassoSvgCandidates16-root"
                      style="min-width: 16px; min-height: 16px;"
                      viewBox="0 0 16 16"
                    >
                      <path
                        d="M16 11H7v4l-7-4V1h16v10Zm-1-9H1v8.42l5 2.857V10h9V2Z"
                      />
                    </svg>
                    <div
                      class="items-center flex PicassoSidebarItemContent-noWrap PicassoSidebarItemContent-withIcon"
                    >
                      <p
                        class="m-0 text-md text-inherit font-regular whitespace-nowrap overflow-ellipsis overflow-hidden"
                      >
                        Test item
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </li>
          <svg
            class="PicassoSvgArrowDownMinor16-root PicassoSidebarItemAccordion-expandIcon PicassoSidebarItemAccordion-lightExpandIcon PicassoAccordion-expandIcon"
            style="min-width: 16px; min-height: 16px;"
            viewBox="0 0 16 16"
          >
            <path
              d="m11.997 5.29.707.707-4 4-.707.707-.707-.707-4-4 .707-.707 4 4 4-4Z"
            />
          </svg>
        </div>
      </div>
      <div
        class="MuiCollapse-root MuiCollapse-hidden"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              role="region"
            >
              <div
                class="flex p-0"
              >
                <ul
                  class="relative list-none outline-none py-2 px-0 m-0 rounded-sm shadow-0 order-1 [&_&]:flex-1 flex-grow flex-shrink max-w"
                  role="menu"
                  tabindex="-1"
                >
                  <li
                    aria-disabled="false"
                    class="bg-transparent px-4 py-[0.375rem] w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden text-left no-underline flex items-center justify-start outline-none appearance-none leading-4 h-[2.75rem] whitespace-nowrap rounded-sm flex-1 min-w text-graphite hover:text-blue focus:text-blue pl-[2.875rem] pr-4 pt-0 pb-0 mt-0 mb-0 mr-4 ml-4"
                    role="menuitem"
                    tabindex="0"
                  >
                    <div
                      class="flex flex-1 max-w"
                    >
                      <div
                        class="flex flex-col flex-1 min-w"
                      >
                        <div
                          class="flex items-center"
                        >
                          <div
                            class="gap-2 items-center inline-flex PicassoSidebarItemContent-noWrap"
                          >
                            <div
                              class="items-center flex PicassoSidebarItemContent-noWrap"
                            >
                              <p
                                class="m-0 text-md text-inherit font-regular whitespace-nowrap overflow-ellipsis overflow-hidden"
                              >
                                Menu item
                              </p>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </li>
                </ul>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SidebarItem with icon 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="bg-transparent px-4 py-[0.375rem] w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden text-left no-underline flex items-center justify-start outline-none appearance-none leading-4 h-[2.75rem] whitespace-nowrap rounded-sm flex-1 min-w text-graphite hover:text-blue focus:text-blue pl-4 pr-4 pt-0 pb-0 mt-0 mb-0 mr-4 ml-4"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="flex flex-1 max-w"
      >
        <div
          class="flex flex-col flex-1 min-w"
        >
          <div
            class="flex items-center"
          >
            <div
              class="gap-2 items-center inline-flex PicassoSidebarItemContent-noWrap"
            >
              <svg
                class="PicassoSvgCandidates16-root"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <path
                  d="M16 11H7v4l-7-4V1h16v10Zm-1-9H1v8.42l5 2.857V10h9V2Z"
                />
              </svg>
              <div
                class="items-center flex PicassoSidebarItemContent-noWrap PicassoSidebarItemContent-withIcon"
              >
                <p
                  class="m-0 text-md text-inherit font-regular whitespace-nowrap overflow-ellipsis overflow-hidden"
                >
                  Test item
                </p>
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
  </div>
</div>
`;
